# avr-hal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain-avr.cmake
examples/blink/: CMakeLists.txt  main.c
include/hal/: gpio.h
src/atmega328p/: gpio.c
